# picoclock-proto

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.c  main_old.c  picoclock-proto.code-workspace
include/: Painter.h  PicoClock.h  PicoDateTimeProvider.h  PicoTimer.h  PreferenceManager.h  ScreenFramebuffer.h  UserInput.h  draw.h
lib/Battery/: CMakeLists.txt
lib/Battery/include/: Battery.h  PicoBattery.h
lib/Battery/src/: PicoBattery.c
lib/DateTime/: CMakeLists.txt
lib/DateTime/include/: DateTimeFormatter.h
lib/DateTime/src/: DateTimeFormatter.c
lib/GC9A01A/: CMakeLists.txt
lib/GC9A01A/include/: GC9A01A.h  Screen.h
lib/GC9A01A/src/: LcdScreen.c
lib/QMI8658/: QMI8658.c  QMI8658.h
lib/Screen/: CMakeLists.txt
lib/Screen/include/: LcdScreen.h  Screen.h
lib/Screen/src/: LcdScreen.c
platform/pi/: Makefile  main.c  publish.sh
platform/pi/include/: FramebufferScreen.h  SystemTimerDateTimeProvider.h
platform/pi/src/: FramebufferScreen.c  SystemTimerDateTimeProvider.c
platform/pico/: CMakeLists.txt  main.c
platform/pico/QMI8658/: CMakeLists.txt  QMI8658.c  QMI8658.h
platform/pico/include/: PicoBattery.h  PicoColorConverter.h  PicoConsole.h  PicoPersistentStorage.h  PicoPowerManager.h  PicoPreferenceManager.h
platform/pico/src/: PicoBattery.c  PicoColorConverter.c  PicoConsole.c  PicoDateTimeProvider.c  PicoPersistentStorage.c  PicoPowerManager.c  PicoPreferenceManager.c  PicoTimer.c  ScreenFramebuffer.c
platform/sdl/: Makefile  main  main.c
platform/sdl/include/: FileStream.h  Input.h  SdlHelper.h  SdlInput.h  SdlScreen.h  SdlTimer.c  SdlTimer.h
platform/sdl/src/: FileStream.c  SdlHelper.c  SdlInput.c  SdlScreen.c  SdlTimer.c
src/: Painter.c  PicoClock.c  PicoDateTimeProvider.c  PicoTimer.c  ScreenFramebuffer.c
